# dbsim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/raw/gtfs/gtfsde-fv/2026-06-13/: source.json
data/raw/gtfs/gtfsde-fv/2026-06-14/: source.json
data/raw/gtfs/gtfsde-nv/2026-06-14/: source.json
docs/: data-versioning.md  micro-validation.md  performance-profile.md  robustness-study.md  strategy-comparison-study.md  validation-report.md  zone-survey.md
notebooks/: replay.ipynb
plan/: db-sim-implementation-plan.md
scenarios/: ammertal-closure.json
src/dbsim/: __init__.py  __main__.py  seed.py
src/dbsim/analysis/: __init__.py  bildfahrplan.py  capacity.py  conflicts.py  micro_validation.py  montecarlo.py  stairway.py  strategy_study.py  validation.py
src/dbsim/dispatch/: __init__.py  altgraph.py  base.py  optimal.py  priority.py
src/dbsim/engine/: __init__.py  blocking.py  coupling.py  events.py  loop.py  meso.py  micro_meet.py  trains.py
src/dbsim/ingest/: __init__.py  gtfs.py  gtfsrt.py  osm.py
src/dbsim/model/: __init__.py  graph.py  micro.py  segments.py  timetable.py
src/dbsim/record/: __init__.py  hashing.py  recording.py
src/dbsim/scenario/: __init__.py  scenario.py
tests/: conftest.py  test_altgraph.py  test_bildfahrplan.py  test_blocking.py  test_capacity.py  test_conflicts.py  test_coupling.py  test_delay_propagation.py  test_determinism.py  test_dispatch.py  test_engine.py  test_graph.py  test_ingest_gtfs.py  test_macro_sim.py  test_meso.py  test_micro.py  test_micro_meet.py  test_micro_validation.py  test_montecarlo.py  test_optimal.py  test_osm_features.py  test_recording.py  test_scenario.py  test_seed.py  test_segments.py  test_strategy_study.py  test_timetable.py  test_validation.py
tests/fixtures/gtfs_mini/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
tests/fixtures/gtfs_transfer/: agency.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
