[project]
name = "dbsim"
version = "0.1.0"
description = "Headless, event-driven simulation of the German rail network — a study tool for delay propagation, capacity, and dispatching."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hlib Strochkovskyi" }]
dependencies = [
    "duckdb>=1.5.3",
    "gtfs-realtime-bindings>=2.0.0",
    "matplotlib>=3.11.0",
    "pyproj>=3.7.2",
    "rustworkx>=0.17.1",
    "shapely>=2.1.2",
]

[project.scripts]
dbsim = "dbsim.__main__:main"

[dependency-groups]
# Dev tooling (installed via `uv sync`). Kept separate from runtime deps.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbsim"]

# ---------------------------------------------------------------------------
# Tooling configuration (single source of truth)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Reasonable, strict-but-not-noisy default set.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
# Allow non-ASCII typography and real German station names (umlauts, en-dashes,
# arrows) in strings/docstrings — they are intentional, not confusable typos.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true

# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = ["google.transit.*", "shapely.*", "pyproj.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["dbsim"]
